# angelheck-crawling

./: README.md  main.py  news_data.csv  pyproject.toml  requirements.txt
crawling_parsing/: crawling_arch.py  parsing.py  selenium_utils.py
