[tool.poetry]
name = "angelheck-crawling"
version = "0.1.0"
description = ""
authors = ["skip"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
pandas = "^2.2.2"
numpy = "^2.0.1"
bs4 = "^0.0.2"
selenium = "^4.23.1"
black = "^24.4.2"
pylint = "^3.2.6"
mypy = "^1.11.1"
aiohttp = "^3.10.0"
requests = "^2.32.3"
webdriver-manager = "^4.0.2"
pymysql = "^1.1.1"
configparser = "^7.0.0"
faker = "^26.0.0"
undetected-chromedriver = "^3.5.5"
fake-useragent = "^1.5.1"
lxml = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
